static/style.css
body, button, input, textarea {
    font-family:        'Open Sans', sans-serif;
    background-color:   #323639;
    color:              #d6d6d7;
}

header img {
    height:             15vh;
    margin:             1vw;
}

button, input, textarea{
    border:             1px solid #d6d6d7;
}

a[target='_blank']::after {
    content:            url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
    margin-left:        0.25em;
    filter:             invert(1);
}

a {
    color:                #09f;
    text-decoration:        none;
}

h2, h3, h4, h5, strong, code {
    color:              #fa7;
}

a:hover, #active-nav {
    color:                  #d6d6d7;
    text-decoration:        underline;
}

a:active, a:visited {
    color:                  #6082b6;
}

nav, footer, #content {
    border-top:             1px dotted #d6d6d7;
    margin:                 1vw;
}

nav ul {
    padding:                0;
}

nav li {
    display:                inline-block;
    padding-left:           1vw;
    padding-right:          1vw;
}

tr:nth-child(2n) {
    background-color:       #555;
}

pre {
    padding-left:           2vw;
    white-space:            pre-wrap;
}

textarea {
    height:                 10vh;
    width:                  60vw;
}

.faq-answers,
.faq-nested,
.mud-clients,
.essence-upgrades
{
    list-style:             none;
}

.challenge-completed {
    text-decoration:            line-through;
    text-decoration-color:      #a00;
    text-decoration-thickness:  0.15em;
}

.login-remember, #new-account-link {
    display:            table;
}

.news-created, .news-creation {
    font-style:         italic;
}

.god-player,
.forger-player,
.eternal-player,
.artisan-player,
.immortal-player,
.consort-player
{
    color:              #00b7eb;
}

.non-classic {
    text-align:         center;
}

.god-player::after {
    content:            ' 😇';
}

.forger-player::after,
.eternal-player::after,
.artisan-player::after,
.immortal-player::after,
.consort-player::after
{
    content:            ' 👼';
}

.dead-player::after {
    content:            ' ☠️';
}

.dead-player,
.survival-player,
.flash-error {
    color:              #fa8072;
}

.flash-info {
    color:              #09f;
}

.flash-success, .active-season td {
    color:              #4cbb17;
}

.flash-warn {
    color:              #f80;
}

.field-errors {
    color:              #fa8072;
    font-weight:        bold;
    list-style:         none;
}

#flashes, #primary-stat {
    font-weight:        bold;
}

#leaderboard-choices ul li {
    display:            inline;
}

#buy-coffee::after {
    content:            none;
    filter:             none;
}

#player-description {
    padding-left:       2vw;
}

#player-remort-upgrades,
#player-details,
#player-quests,
#player-time,
#world-list
{
    column-count:       2;
    column-rule:        0.25em dotted #d6d6d7;
}

#essence-balance ul,
#mud-client-list ul,
#mud-client-list ul ul,
#player-details ul ul
{
    column-count:       initial;
}

#essence, #created {
    text-align:         left;
}

#admin-layout-link {
    text-align:         center;
}

#season, #player-search-form {
    text-align:         right;
}

